<resources>
    <string name="app_name">KV Saathi</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tag_line">किसानों का साथी!</string>
    <string name="enter_num">write some text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_hint">123456789</string>
    <string name="otp_send">OTP भेजें</string>
    <string name="num_start">+91-</string>
    <string name="put_num">अपना फोन नंबर डालें !</string>
    <string name="send_otp">हम आपको 4 अंकों का ओटीपी भेजेंगे</string>
    <string name="finding_your_details">आपकी जानकारी खोजी जा रही है</string>
    <string name="enter_details">अपनी जानकारी दर्ज करें</string>
    <string name="move_ahead">आगे बढ़ें</string>
    <string name="name">नाम</string>
    <string name="email">ईमेल</string>
</resources>