<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details2">

    <TextView
        android:id="@+id/PBText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#AFAFAF"
        android:textSize="12dp"
        android:text="Step 4 of 8"
        />

    <ImageView
        android:id="@+id/doctorImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/doctor"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:textColor="@color/text_color"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/enter_details"
        />

    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:background="@drawable/info_box"
        android:orientation="horizontal"
       >

            <TextView
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/name"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_marginLeft="10dp"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="320dp"
        android:background="@drawable/info_box"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textSize="24dp"
            android:textStyle="bold"
            android:hint="@string/email"
            android:textColor="@color/text_color"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:background="@drawable/button_background"
        android:text="@string/move_ahead"
        android:textSize="20dp"
        android:textColor="@color/text_color"
        />/>


</FrameLayout>